# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
Dokumentaatio/: changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md
src/: bingo_repository.py  bingosheets.py  create_pdf.py  database_connection.py  index.py  initialize_database.py  play.py  time.py  tuntikirjanpito.py
src/tests/: bingosheets_test.py
src/ui/: create_bingosheets_view.py  play_bingo_view.py  ui.py  welcome_view.py
